# Pred_Mark_Clat

./: .env.example  .gitignore  cli.py  pyproject.toml  requirements.txt
config/: models.py  settings.py
configs/: market_pairs.json
deploy/: DEPLOY.md  install.sh  push.sh
deploy/systemd/: pmc-arb-bot.service  pmc-llm-bot.service  pmc-newsalpha-bot.service  pmc-weather-recorder.service
scripts/: dry_run_pipeline.py  inspect_4h_btc_dates.py  inspect_market_types.py  inspect_polymarket_btc.py  measure_weather_edge.py  survey_arb_markets.py  test_connectivity.py  validate_weather_thesis.py
src/agents/: base_agent.py  bear_researcher.py  bull_researcher.py  ensemble.py  forecaster.py  news_analyst.py  risk_agent.py
src/arbitrage/: __init__.py  executor.py  matcher.py  models.py  orchestrator.py  scanner.py
src/clients/: base_client.py  kalshi_client.py  openrouter_client.py  polymarket_client.py
src/db/: manager.py  schema.py
src/models/: market.py  portfolio.py  prediction.py  trade.py
src/newsalpha/: __init__.py  coinbase_rest.py  coinbase_ws.py  db.py  executor.py  fair_value.py  flash_detector.py  market_classifier.py  models.py  news_classifier.py  news_feed.py  orchestrator.py  (+3 more)
tests/: conftest.py  test_arbitrage.py  test_calibration.py  test_ensemble.py  test_fees.py  test_market_filters.py  test_newsalpha_executor.py  test_newsalpha_fair_value.py  test_newsalpha_flash.py  test_newsalpha_gate.py  test_newsalpha_market_classifier.py  test_newsalpha_signal.py  test_newsalpha_slippage.py  test_pipeline.py  test_risk_manager.py  test_weather_recorder.py
(+16 files in other folders)
