[project]
name = "pred-mark-clat"
version = "0.1.0"
description = "AI-powered prediction market trading bot for Polymarket and Kalshi"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "typer[all]>=0.12.0",
    "python-dotenv>=1.0.0",
    "cryptography>=42.0.0",
    "py-clob-client>=0.17.0",
    "py-order-utils>=0.3.0",
    "web3>=6.15.0",
    "scipy>=1.12.0",
    "numpy>=1.26.0",
    "feedparser>=6.0.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
]

[project.scripts]
pmc = "cli:app"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.backends._legacy:_Backend"
